--- a/frontend/src/Components/Main/main.scss
+++ b/frontend/src/Components/Main/main.scss
@@ -1,6 +1,6 @@
 .main {
   background-color: #f7f8fc;
-  height: 100%;
+  height: 100vh;
 
   .main_container {
     max-width: 440px;
